	  if your camera supports that - like Canon G3. You can
	  disable this by setting GalleryAutoRotate to 0 (Me)
	- Works with Inline > 0.42 (Peter Andreasen/Me)
	- Show nice icons and allow downloads for doc,mp3,ogg,rtf,wav
	  and wmv in addition to the current movie types (Me)
	- Now displays nice values for Aperture,FocalLength,ShutterSpeed
	  exif values (Thomas Eibner) 

0.5.1 Sat Nov  9 11:49:29 CET 2002

	- InlineDir is no longer configurable using PerlSetVar, which
	  fixes make test. (Me)
	- Added test-suite (Me, Andreas Plesner Jacobsen)
	- Write to the error log if unable to open files in the cache (Me)
	- cache_dir changed to use File::Spec to make Apache::Gallery
	  more portable. It may even run under Windows now? (Andreas Plesner Jacobsen)

0.5 Sun Sep 15 11:55:56 CEST 2002

	- Added slideshow feature (Me)	
	- Code cleanup (Me)
	- Moved the cache to one single directory outside the webscope (Rene Joergensen)
	- Allow user to customize the "No info found" message (Me)

0.4.1 Sun Aug 11 17:48:09 CEST 2002

	- URI Escape image URL in the size selection URLs. (Me)
	- Fixed bug where .cache directory was not created when requesting images directly (Me)
	- Don't allow scaling images more than their original size (Jan Chrillesen)
	- Handle already rotated images correct (Jan Chrillesen, Me)
	- Fix bug when rotating pictures and a .thm file was present (Thomas Eibner)
	- Apache::Gallery now allows for regular files to be served correctly (Thomas Eibner)
	- Support for detailed flash information from Image::Info 1.11 (Me, Allan Joergensen)
	- Moved Apache::Gallery into subversion revision control instead of CVS (Me)

0.4 Sun Jun  2 13:11:09 CEST 2002

	- Round height and width to integers when scaling to avoid
	  widths like 640x479.393939393939 (Me)
	- Regenerate scaled pictures and thumbnails if the original
	  image has changed, the image.rotate file has been added or
	  changed or if the copyright image was added og changed. (Me)