@@ -10,6 +10,7 @@ $FILES
         </div>
       </td>
     </tr>
+    $DIRCOMMENT
 		<tr>
 			<td>
     		Indexed by <a href="http://apachegallery.dk">Apache::Gallery</a> - Copyright &copy; 2001-2003 Michael Legart - <a href="http://www.hestdesign.com/">Hest Design!</a>
